# qpos-linux

./: .gitignore  .gitmodules  README.md
app_demo/linux_pos_app/: CMakeLists.txt  includes_list.cmake  libs_definitions.cmake  linux_pos_app.asc  sources_list.cmake  ympkg.xml
app_demo/linux_pos_app/inc/: Disp.h  emvdeviceimpl.h  osal.h
app_demo/linux_pos_app/inc/dspread/: app_emv.h  cJSON.h  emvdeviceimpl.h  error_code_list.h  function.h  lib_common.h  lib_fun.h  proj_define.h  proj_sdk.h  tms_cfg.h  utility.h
app_demo/linux_pos_app/pkg_bat/: compile.bat  package.bat  recompile.bat
app_demo/linux_pos_app/res/: Dspread.565  UnionPay.565
app_demo/linux_pos_app/src/: appinc.h  main.cpp  typedefine.h
app_demo/linux_pos_app/src/business/: ResponseCode.c  ResponseCode.h  TLVUtil.c  TLVUtil.h  business.h  businessUtil.c  businessUtil.cpp  businessUtil.h  consume.c  consume.cpp  debug.h  emvImpl.c  emvImpl.cpp  ntp.c  ntp.h  ota.c  ota.h  sign_unionpay.c  singletest.c  singletest.cpp  sockettest.c  sockettest.cpp  utility.c  utility.h
app_demo/linux_pos_app/src/common_api/base64/: base64.c  base64.h
app_demo/linux_pos_app/src/common_api/battery/: app_battery_icon.c
app_demo/linux_pos_app/src/common_api/iso8583/: App_ISOMsg.c  App_ISOMsg.h  App_iso8583.h
app_demo/linux_pos_app/src/common_api/network/: network.h  network_errno.c  socket.c  socket.h
app_demo/linux_pos_app/src/common_api/pedtest/: ped_test.c  ped_test.h
app_demo/linux_pos_app/src/custom_app/: api_wrapper.c  api_wrapper.h  app_global.c  app_global.h  app_http.c  app_includes.h  app_ota.c  app_ota.h  app_pkt.c  app_pkt.h  app_server.c  app_setting.c  app_setting.h  app_thread.c  app_thread.h  app_trans.c  app_trans.h  lvgl_porting.c  lvgl_porting.h  ntp.c  printer.c  printer.h  signature.c  signature.h  task_handle.c  task_handle.h  ui_MultiApp.c  ui_MultiApp.h  ui_func.c  ui_func.h  ui_main.c  ui_main.h
app_demo/linux_pos_app/src/custom_app/battery/: app_battery_icon.c
app_demo/linux_pos_app/src/custom_app/http/: app_http.c  app_http.h  app_pkt.c  app_pkt.h  app_request.c  app_request.h  app_server.c  app_server.h  hostUrl.h
app_demo/linux_pos_app/src/custom_app/ota/: app_ota.c  app_ota.h
app_demo/linux_pos_app/src/custom_app/setting/: app_setting.c  app_setting.h  ui_setting.c  ui_setting.h  ui_sim.c  ui_sim.h  ui_wifi.c  ui_wifi.h
app_demo/linux_pos_app/src/custom_app/trans/: app_trans.c  app_trans.h  business.c  business.h  businessUtil.c  businessUtil.h  emvImpl.c  emvimpl.h  ui_card.c  ui_card.h  ui_emvPinDisp.c  ui_emvPinDisp.h  ui_emvSelectMultiApp.c  ui_emvSelectMultiApp.h  ui_signature.c  ui_signature.h
app_demo/linux_pos_app/src/custom_app/util/: api_wrapper.c  api_wrapper.h  app_global.c  app_global.h  ntp.c  ntp.h  ui_status_bar.c  ui_status_bar.h  ui_styles.c  ui_styles.h  ui_utils.c  ui_utils.h  utility.c  utility.h
app_demo/linux_pos_app/src/image/: Makefile  lv_Alert_Icon.c  lv_Chip_Icon.c  lv_Contactless_Icon.c  lv_Fail_Icon.c  lv_Menu_Icon.c  lv_Small_OK_Icon.c  lv_Strip_Icon.c  lv_Suspend_Icon.c  lv_Update_Icon.c  lv_image.h
app_demo/linux_pos_app/src/lvgl/: Makefile  lv_conf.h  lvgl.h
app_demo/linux_pos_app/src/lvgl/src/font/: lv_font.mk  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  (+3 more)
app_demo/linux_pos_app/src/pos_api/: cmacro.h  debug.h
app_demo/linux_pos_app/src/pos_api/battery/: app_battery_icon.c  app_battery_icon.h
app_demo/linux_pos_app/src/pos_api/encryption/: encryption.c  encryption.h
app_demo/linux_pos_app/src/pos_api/iso8583/: App_ISOMsg.c
app_demo/linux_pos_app/src/pos_api/network/: network.c  network_errno.c  socket.c  socket.h
app_demo/linux_pos_app/src/posapp/: cmacro.h  ped_test.c  ped_test.h
app_demo/linux_pos_app/src/posapp/encryption/: encryption.c
app_demo/linux_pos_app/src/posapp/iso8583/: 8583_unionpay.c  App_ISOMsg.c  App_ISOMsg.h  App_iso8583.c  App_iso8583.h  function.c  function.h
app_demo/linux_pos_app/src/posapp/network/: network.c  network.h  network_errno.c  network_errno.h  socket.c  socket.h
app_demo/linux_pos_app/src/project/: app_common.h  app_emv.h  app_includes.h  app_thread.c  kernel_api.h  kn_common.h  links.h  lvgl_porting.c  proj_cfg.h  proj_define.h  proj_sdk.h  task_handle.c  tlv_pro.h  tms_cfg.h  ui_main.c  ui_main.h
app_demo/linux_pos_app/src/ui/: TrancProcView.c  TrancProcView.h
(+23 files in other folders)
